refactor(common): 重构系统工具类和配置工具类
- 重构 SystemUtils 类，移除继承关系，新增大量系统属性常量
- 新增获取环境变量、主机名、Java_HOME 等系统信息的方法
- 完善操作系统和 Java 版本的判断常量
- 修改 ConfigKit 类，将参数类型从 ConfigurableEnvironment 改为 Environment
- 新增通过 ant 表达式获取匹配配置属性的方法
- 替换 BasicUtils 调用为 ZeakStackUtils
- 在 LauncherInitiation 中新增 beforeWrapper 默认方法
- 更新 ClientType 枚举，简化类型定义
- 修改 EnabledEnum 枚举，优化描述信息
- 升级 ServiceConverter 接口，新增 d2p 和 p2d 方法替代原有方法
- 为 Page 类添加 Swagger 注解
- 新增 CollectionUtils.filter 方法用于集合差异分析
- 扩展 DateUtils，新增时间重叠判断和获取重叠时间的方法